[package]
name = "llvm-github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.32.0"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["macros", "rt"] }
tabled = "0.14.0"
chrono = "0.4.31"

